<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/login_email"
        android:layout_alignStart="@+id/login_email"
        android:layout_alignTop="@+id/login_email"
        android:text="@string/login_to_your_account"
        android:textSize="25sp"
        tools:textColor="@android:color/black" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_alignLeft="@+id/login_textView"
        android:layout_alignStart="@+id/login_textView"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginTop="30dp"
        android:text="@string/login_into"
        android:textSize="25sp"
        tools:textColor="@android:color/black"
        android:layout_marginLeft="8dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_toolbar"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textColorHint="#000000"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#000000"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_password"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#0D47A1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_forget_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_alignTop="@+id/login_btn"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:textSize="16sp"
        android:text="Forgot Password ?"
        android:elevation="10dp"/>


</RelativeLayout>
