<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

   >
    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_below="@id/register_toolbar"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:hint="@string/display_name"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_age"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_display_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/age"
            android:inputType="numberSigned"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_city"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_age"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/city"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_city"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/reg_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/reg_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <RadioButton android:id="@+id/reg_radio_counsellor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Counsellor"
            />
        <RadioButton android:id="@+id/reg_radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"
            />
    </RadioGroup>
    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/reg_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:backgroundTint="#0D47A1"
        android:elevation="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:background="@drawable/button_round"/>


</RelativeLayout>
